Implemented CSS Transitions, and Flyout Hover dropdown submenu

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 </head>
 
 <body>
-    <!-- <img src="./img/Product-Details.jpg" alt=""> -->
     <div id="header">
         <img src="./img/axiom-logo-main.png" alt="">
         <div class="header-right">
@@ -30,12 +29,12 @@
 
     <div id="nav">
         <div>
-            <a href="">Camping</a>
+            <a href="" class="nav-links">Camping</a>
             <img class="arrow" src="./img/noun-arrow.png" alt="">
         </div>
-        <div class="clothing">asd
-            <!-- <a href="">Clothing</a> -->
-            <!-- <img class="arrow" src="./img/noun-arrow.png" alt=""> -->
+        <div class="clothing">
+            <a href="" class="clothing-link">Clothing</a>
+            <img class="arrow" src="./img/noun-arrow.png" alt="">
             <div class="flyout">
                 <a>Outerwear</a>
                 <a>Hiking Shoes / Boots</a>
@@ -44,15 +43,15 @@
             </div>
         </div>
         <div>
-            <a href="">Fishing</a>
+            <a href="" class="nav-links">Fishing</a>
             <img class="arrow" src="./img/noun-arrow.png" alt="">
         </div>
         <div>
-            <a href="">Hiking</a>
+            <a href="" class="nav-links">Hiking</a>
             <img class="arrow" src="./img/noun-arrow.png" alt="">
         </div>
         <div>
-            <a href="">Biking</a>
+            <a href="" class="nav-links">Biking</a>
             <img class="arrow" src="./img/noun-arrow.png" alt="">
         </div>
     </div>
